fixed bug where drop down menu was stuck in place

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -62,7 +62,7 @@
 
     &__menu { // drop down menu
         background: white;
-        margin-top: 1.5rem;
+        margin-top: 19.5rem;
         padding: 1.625rem;
         border-radius: 5px;
         position: absolute;
