--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -209,7 +209,7 @@ main {
 
 .header__menu {
   background: white;
-  margin-top: 1.5rem;
+  margin-top: 19.5rem;
   padding: 1.625rem;
   border-radius: 5px;
   position: absolute;
